# frappe-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  checklist.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
docs/superpowers/plans/: 2026-05-18-frappe-cli-installer.md
docs/superpowers/specs/: 2026-05-18-frappe-cli-design.md
scripts/: lint.sh
src/frappe_cli/: cli.py
src/frappe_cli/app/: __init__.py  clone.py
src/frappe_cli/backup/: __init__.py  setup.py
src/frappe_cli/config/: __init__.py  get.py  set.py  validate.py
src/frappe_cli/data/: example_config.yaml
src/frappe_cli/dev/: commands.py  context.py  sudo_commands.py
src/frappe_cli/firewall/: __init__.py  setup.py
src/frappe_cli/install/: __init__.py  bench.py  context.py  deps.py  fail2ban.py  init.py  mariadb.py  nginx_utils.py  prod.py  ssh_hardening.py  state.py  system.py  user.py  wizard.py
src/frappe_cli/install/steps/: __init__.py  app.py  base.py  bench.py  dns_multitenant.py  init_bench.py  mariadb.py  nodejs.py  production.py  redis.py  site.py  ssl.py  sudoers.py  system.py  uv_check.py  wkhtmltopdf.py
src/frappe_cli/maintenance/: __init__.py  logrotate.py  logrotate_cmd.py
src/frappe_cli/monitor/: __init__.py  health.py  logs.py
src/frappe_cli/optimize/: __init__.py  performance.py
src/frappe_cli/rollback/: __init__.py  uninstall.py
src/frappe_cli/service/: __init__.py  restart.py  status.py
src/frappe_cli/site/: __init__.py  add.py  backup.py  create.py  delete.py  list.py  restore.py
src/frappe_cli/ssl/: __init__.py  list_certs.py  setup.py
src/frappe_cli/step/: __init__.py  _runner.py  commands.py
src/frappe_cli/ui/: panels.py  prompts.py  steps.py
src/frappe_cli/utils/: context.py  errors.py  git_repo.py  logging.py  shell.py  ssl_cert.py  sudoers.py  validators.py
tests/: test_app_commands.py  test_backup_commands.py  test_cli_basic.py  test_dev_commands.py  test_firewall_commands.py  test_git_repo.py  test_install_context.py  test_install_state.py  test_install_steps.py  test_install_wizard.py  test_monitor_commands.py  test_optimize_commands.py  test_rollback_commands.py  test_service_commands.py  test_site_commands.py  test_ssl_cert_utils.py  test_ssl_commands.py  test_step_commands.py  test_sudoers.py  test_ui_panels.py  test_ui_steps.py  test_validators.py
